2004-07-09  John Levon  <levon@movementarian.org>

	* libpp/populate.cpp: quash timestamp warnings
	 when using archive: profile specifier

2004-07-09  John Levon  <levon@movementarian.org>

	* pp/opstack_options.cpp: include call-graph
	  files in archive.

2004-07-06  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: remove sample-file
	  and binary profile specifiers

	* doc/opcontrol.1.in:
	* doc/oprofile.xml:
	* pp/common_option.cpp:
	* utils/opcontrol: allow either "lib" or "library"
	 for merge/separate option. Document "lib"

2004-07-06  Will Cohen <wcohen@redhat.com>

	* doc/oprofile.xml:
	* doc/Makefile.am:
	* doc/oparchive.1.in:
	* doc/oprofile.1.in:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h:
	* libpp/populate.h:
	* libpp/populate.cpp:
	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h:
	* libpp/locate_images.cpp:
	* libpp/locate_images.h:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h:
	* pp/Makefile.am:
	* pp/oparchive.cpp:
	* pp/oparchive_options.cpp:
	* pp/oparchive_options.h:
	* pp/opreport.cpp:
	* pp/opreport_options.h:
	* pp/opreport_options.cpp:
	* pp/opstack.cpp:
	* pp/opstack_options.h:
	* pp/opstack_options.cpp:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opgprof.cpp:
	* pp/opgprof_options.cpp:
	* pp/opgprof_options.h:
	* pp/opannotate.cpp:
	* configure.in: Support for oparchive.

2004-07-05  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in: add opstack(1) to SEE ALSO

2004-06-21  John Levon  <levon@movementarian.org>

	* events/i386/p4/events:
	* events/i386/p4-ht/events:
	* module/x86/op_model_athlon.c:
	* module/x86/op_model_p4.c:
	* module/x86/op_model_ppro.c:
	* module/ia64/op_pmu.c: fix bug 964097 (event
	code of 0x00 doesn't work) by relying consistently
	on "enabled" not "event"
